--- a/index.html
+++ b/index.html
@@ -4,8 +4,57 @@
         <meta charset="utf-8">
         <title>Todo App</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="bg-primary box-shadow" id="add-todo">
+            <div class="container">
+                <form>
+                    <input type="text" class="basic-box">
+                    <button id="add-todo-btn">
+                        <i class="fa-solid fa-plus"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
+        <div class="container">
+            <div class="todo-item basic-box box-shadow">
+                <p>Todo Item Text</p>
+                <div class="div todo-item-btns">
+                    <i class="fa-solid fa-lg fa-trash trash-btn"></i>
+                    <div class="divider"></div>
+                    <i class="fa-regular fa-lg fa-square-check complete-btn"></i>
+                </div>
+            </div>
+            <div class="todo-item basic-box box-shadow">
+                <p>Todo Item Text</p>
+                <div class="div todo-item-btns">
+                    <i class="fa-solid fa-lg fa-trash trash-btn"></i>
+                    <div class="divider"></div>
+                    <i class="fa-regular fa-lg fa-square-check complete-btn"></i>
+                </div>
+            </div>
+            <div class="todo-item basic-box box-shadow">
+                <p>Todo Item Text</p>
+                <div class="div todo-item-btns">
+                    <i class="fa-solid fa-lg fa-trash trash-btn"></i>
+                    <div class="divider"></div>
+                    <i class="fa-regular fa-lg fa-square-check complete-btn"></i>
+                </div>
+            </div>
+        </div>
+        <div class="horizontal-divider"></div>
+        <div class="container">
+            <div class="todo-item basic-box box-shadow">
+                <p>Todo Item Text</p>
+                <div class="div todo-item-btns">
+                    <i class="fa-solid fa-lg fa-trash trash-btn"></i>
+                    <div class="divider"></div>
+                    <i class="fa-solid fa-lg fa-square-check complete-btn"></i>
+                </div>
+            </div>
+        </div>
         <script src="./js/index.js"></script>
     </body>
 </html>
